Fixed some i18n msgid's

--- a/po/ca.po
+++ b/po/ca.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lingot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-29 15:25+0100\n"
+"POT-Creation-Date: 2011-11-29 16:16+0100\n"
 "PO-Revision-Date: 2007-10-02 19:00+0200\n"
 "Last-Translator: Raül Cambeiro <rulet@menta.net>\n"
 "Language-Team: Catalan <ca@li.org>\n"
@@ -727,6 +727,6 @@ msgstr ""
 msgid ""
 "Frequency. You can enter here the absolute frequency for a given note as a "
 "reference, and all the other frequencies will shift according to the "
-"deviations specified in the 'Shift' column. You can use an absolute numeric "
-"value or the keywords 'mid-C' (261.625565 Hz) and 'mid-A' (440 Hz)."
+"deviations specified in the 'Shift' column. You can either use an absolute "
+"numeric value or the keywords 'mid-C' (261.625565 Hz) and 'mid-A' (440 Hz)."
 msgstr ""
