--- a/po/it.po
+++ b/po/it.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-29 15:25+0100\n"
+"POT-Creation-Date: 2011-11-29 16:16+0100\n"
 "PO-Revision-Date: 2008-07-27 21:38+0200\n"
 "Last-Translator: cereda.ste@gmail.com\n"
 "Language-Team:  <cereda.ste@gmail.com>\n"
@@ -733,8 +733,8 @@ msgstr ""
 msgid ""
 "Frequency. You can enter here the absolute frequency for a given note as a "
 "reference, and all the other frequencies will shift according to the "
-"deviations specified in the 'Shift' column. You can use an absolute numeric "
-"value or the keywords 'mid-C' (261.625565 Hz) and 'mid-A' (440 Hz)."
+"deviations specified in the 'Shift' column. You can either use an absolute "
+"numeric value or the keywords 'mid-C' (261.625565 Hz) and 'mid-A' (440 Hz)."
 msgstr ""
 
 #, fuzzy
