--- a/po/cs.po
+++ b/po/cs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: cs\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-29 15:25+0100\n"
+"POT-Creation-Date: 2011-11-29 16:16+0100\n"
 "PO-Revision-Date: 2009-08-14 17:00+0200\n"
 "Last-Translator: Karel Volný <kavol@seznam.cz>\n"
 "Language-Team: Czech <diskuze@lists.l10n.cz>\n"
@@ -729,8 +729,8 @@ msgstr ""
 msgid ""
 "Frequency. You can enter here the absolute frequency for a given note as a "
 "reference, and all the other frequencies will shift according to the "
-"deviations specified in the 'Shift' column. You can use an absolute numeric "
-"value or the keywords 'mid-C' (261.625565 Hz) and 'mid-A' (440 Hz)."
+"deviations specified in the 'Shift' column. You can either use an absolute "
+"numeric value or the keywords 'mid-C' (261.625565 Hz) and 'mid-A' (440 Hz)."
 msgstr ""
 
 #, fuzzy
