--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.7.6\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-29 15:25+0100\n"
+"POT-Creation-Date: 2011-11-29 16:16+0100\n"
 "PO-Revision-Date: 2008-01-12 17:23:00+0100\n"
 "Last-Translator: Roland Stigge <stigge@antcom.de>\n"
 "Language-Team: German <de@li.org>\n"
@@ -726,6 +726,6 @@ msgstr ""
 msgid ""
 "Frequency. You can enter here the absolute frequency for a given note as a "
 "reference, and all the other frequencies will shift according to the "
-"deviations specified in the 'Shift' column. You can use an absolute numeric "
-"value or the keywords 'mid-C' (261.625565 Hz) and 'mid-A' (440 Hz)."
+"deviations specified in the 'Shift' column. You can either use an absolute "
+"numeric value or the keywords 'mid-C' (261.625565 Hz) and 'mid-A' (440 Hz)."
 msgstr ""
