--- a/po/gl.po
+++ b/po/gl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lingot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-29 15:25+0100\n"
+"POT-Creation-Date: 2011-11-29 16:16+0100\n"
 "PO-Revision-Date: 2007-08-23 17:46+0200\n"
 "Last-Translator: Ibán Cereijo <ibancg@gmail.com>\n"
 "Language-Team: Galician <LL@li.org>\n"
@@ -839,15 +839,11 @@ msgstr ""
 msgid ""
 "Frequency. You can enter here the absolute frequency for a given note as a "
 "reference, and all the other frequencies will shift according to the "
-"deviations specified in the 'Shift' column. You can use an absolute numeric "
-"value or the keywords 'mid-C' (261.625565 Hz) and 'mid-A' (440 Hz)."
+"deviations specified in the 'Shift' column. You can either use an absolute "
+"numeric value or the keywords 'mid-C' (261.625565 Hz) and 'mid-A' (440 Hz)."
 msgstr ""
 "Frecuencia. Pode definir aquí a frecuencia absoluta dunha nota concreta como "
 "referencia, e o resto de frecuencias estableceránse en base a este valor e ó "
 "desprazamento en frecuencia de cada nota (definido na columna "
 "'Desprazamento'). Pode empregar tanto un valor numérico, ou as palabras "
 "clave 'mid-C' (261.625565 Hz) e 'mid-A' (440 Hz)."
-
-#, fuzzy
-#~ msgid "Cannot connect to JACK server"
-#~ msgstr "Non é posible conectar có servidor JACK"
