--- a/THANKS
+++ b/THANKS
@@ -1,4 +1,5 @@
 
-* Niv Sardi Altivanik, for debian packaging and maintenance, and for man page.
-* Matthew Blissett (Logo design).
-* Graciano Carrillo, for helping in maintenance.
+* Niv Sardi Altivanik (debian package, maintenance and man page).
+* Matthew Blissett (logo design).
+* Graciano Carrillo (maintenance).
+* Karel Volný (beta testing).
