--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 2012-01-02 Ibán Cereijo <ibancg@gmail.com>
 
 	* Fixed #35183, #35220, #35221 (thanks to Roy J. Tellason, Sr.)
+	* Tagged beta version 0.9.2b4
+
 
 2011-11-28 Ibán Cereijo <ibancg@gmail.com>
 
