--- a/po/cs.po
+++ b/po/cs.po
@@ -1,13 +1,13 @@
 # translation of cs.po to Czech
 # Copyright (C) 2008 Karel Volný
 # This file is distributed under the same license as the lingot package.
-#
+# 
 # Karel Volný <kavol@seznam.cz>, 2008, 2009, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: cs\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-02-01 16:50+0100\n"
+"POT-Creation-Date: 2013-02-02 15:39+0100\n"
 "PO-Revision-Date: 2013-02-01 17:29+0100\n"
 "Last-Translator: Karel Volný <kvolny@redhat.com>\n"
 "Language-Team: Czech <diskuze@lists.l10n.cz>\n"
@@ -149,7 +149,8 @@ msgid ""
 msgstr "Umožňuje upravit úroveň signálu bez pomoci samostatného mixéru."
 
 #: ../src/glade/lingot-config-dialog.glade.h:25
-msgid "Quick adjusments on the dynamic response and the signal levels."
+#, fuzzy
+msgid "Quick adjustments on the dynamic response and the signal levels."
 msgstr "Nastavení odezvy a úrovně signálu."
 
 #: ../src/glade/lingot-config-dialog.glade.h:26
@@ -179,9 +180,9 @@ msgid ""
 "effective sample rate."
 msgstr ""
 "Vyrovnávací paměť pro FFT umožňuje analyzovat spektrum. Vyšší hodnoty mohou "
-"napomoci najít správnou špičku, ale zároveň jsou mnohem výpočetně náročnější. "
-"Nenastavujte vyšší hodnoty pokud nemáte zároveň odpovídajícně vysokou "
-"efektivní vzorkovací frekvenci."
+"napomoci najít správnou špičku, ale zároveň jsou mnohem výpočetně "
+"náročnější. Nenastavujte vyšší hodnoty pokud nemáte zároveň odpovídajícně "
+"vysokou efektivní vzorkovací frekvenci."
 
 #: ../src/glade/lingot-config-dialog.glade.h:29
 msgid "256"
@@ -220,9 +221,9 @@ msgid ""
 "(Nyquist-Shannon sampling theorem)."
 msgstr ""
 "Efektivní vzorkovací kmitočet. Čímž nižší je tento parametr, tím přesnější "
-"bude FFT a tím pádem i detekce správné špičky. Mějte ale na paměti, že se tím "
-"zvětší časové okno a že nebudete schopni ladit kmitočty nad polovinou této "
-"hodnoty (Shannonův teorém)."
+"bude FFT a tím pádem i detekce správné špičky. Mějte ale na paměti, že se "
+"tím zvětší časové okno a že nebudete schopni ladit kmitočty nad polovinou "
+"této hodnoty (Shannonův teorém)."
 
 #: ../src/glade/lingot-config-dialog.glade.h:37
 msgid "seconds"
@@ -512,10 +513,10 @@ msgid ""
 "horizontal scrollbar."
 msgstr ""
 "Tato oblast ukazuje spektrum vstupního signálu. Základní kmitočet je "
-"zvýrazněn vertikální přerušovanou čarou a práh šumu je vyznačen "
-"přerušovanou horizontální čarou. Pokud máte nastavenou větší velikost "
-"vyrovnávací paměti FFT (více než 512 vzorků), můžete prohlížet celé spektrum "
-"pomocí horizontálního posuvníku."
+"zvýrazněn vertikální přerušovanou čarou a práh šumu je vyznačen přerušovanou "
+"horizontální čarou. Pokud máte nastavenou větší velikost vyrovnávací paměti "
+"FFT (více než 512 vzorků), můžete prohlížet celé spektrum pomocí "
+"horizontálního posuvníku."
 
 #: ../src/glade/lingot-mainframe.glade.h:19
 msgid "Spectrum"
@@ -715,8 +716,8 @@ msgid ""
 msgstr ""
 "Prosím zkontrolujte, že neběží jiné procesy, které zamykají požadované "
 "zařízení. Také mějte na paměti, že některé zvukové servery mohou blokovat "
-"prostředky i několik sekund poté, co byly naposledy použity. V tom případě to "
-"zkuste znovu."
+"prostředky i několik sekund poté, co byly naposledy použity. V tom případě "
+"to zkuste znovu."
 
 #: ../src/lingot-gui-mainframe.c:301
 msgid "The core is not running, you must check your configuration."
